parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RNOTHING

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimirins fins
Rule 5     instruccion -> DECLARACIONES fins
Rule 6     instruccion -> if_instr fins
Rule 7     instruccion -> while_instr fins
Rule 8     instruccion -> for_inst fins
Rule 9     fins -> PTCOMA
Rule 10    instruccion -> error PTCOMA
Rule 11    imprimirins -> RPRINTLN PARAB expresion PARC
Rule 12    if_instr -> RIF expresion instrucciones REND
Rule 13    if_instr -> RIF expresion instrucciones elifinst RELSE instrucciones REND
Rule 14    elifinst -> elifinst elifinstru
Rule 15    elifinst -> elifinstru
Rule 16    elifinstru -> RELSEIF expresion instrucciones
Rule 17    while_instr -> RWHILE expresion instrucciones REND
Rule 18    for_inst -> RFOR ID RIN expresion DPUNTOS expresion instrucciones REND
Rule 19    DECLARACIONES -> DECLA_COM
Rule 20    DECLARACIONES -> DECLA_SIM
Rule 21    DECLA_SIM -> ID IGUALAR expresion
Rule 22    DECLA_COM -> ID IGUALAR expresion DOSP TIPOS
Rule 23    TIPOS -> RINT
Rule 24    TIPOS -> RFLOT
Rule 25    TIPOS -> RBOOL
Rule 26    TIPOS -> RCHAR
Rule 27    TIPOS -> RSTRING
Rule 28    expresion -> expresion MAS expresion
Rule 29    expresion -> expresion MENOS expresion
Rule 30    expresion -> expresion POR expresion
Rule 31    expresion -> expresion DIV expresion
Rule 32    expresion -> expresion POT expresion
Rule 33    expresion -> expresion MOD expresion
Rule 34    expresion -> expresion MAY expresion
Rule 35    expresion -> expresion MEN expresion
Rule 36    expresion -> expresion MAYOIGUAL expresion
Rule 37    expresion -> expresion MENOIGUAL expresion
Rule 38    expresion -> expresion IGUALES expresion
Rule 39    expresion -> expresion DIFERENTES expresion
Rule 40    expresion -> PARAB expresion PARC
Rule 41    expresion -> ID
Rule 42    expresion -> ENTERO
Rule 43    expresion -> DECIMAL
Rule 44    expresion -> CADENA
Rule 45    expresion -> CHAR

Terminals, with rules where they appear

CADENA               : 44
CHAR                 : 45
DECIMAL              : 43
DIFERENTES           : 39
DIV                  : 31
DOSP                 : 22
DPUNTOS              : 18
ENTERO               : 42
ID                   : 18 21 22 41
IGUALAR              : 21 22
IGUALES              : 38
MAS                  : 28
MAY                  : 34
MAYOIGUAL            : 36
MEN                  : 35
MENOIGUAL            : 37
MENOS                : 29
MOD                  : 33
PARAB                : 11 40
PARC                 : 11 40
POR                  : 30
POT                  : 32
PTCOMA               : 9 10
RBOOL                : 25
RCHAR                : 26
RELSE                : 13
RELSEIF              : 16
REND                 : 12 13 17 18
RFLOT                : 24
RFOR                 : 18
RIF                  : 12 13
RIN                  : 18
RINT                 : 23
RNOTHING             : 
RPRINTLN             : 11
RSTRING              : 27
RWHILE               : 17
error                : 10

Nonterminals, with rules where they appear

DECLARACIONES        : 5
DECLA_COM            : 19
DECLA_SIM            : 20
TIPOS                : 22
elifinst             : 13 14
elifinstru           : 14 15
expresion            : 11 12 13 16 17 18 18 21 22 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40
fins                 : 4 5 6 7 8
for_inst             : 8
if_instr             : 6
imprimirins          : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 12 13 13 16 17 18
while_instr          : 7

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimirins fins
    (5) instruccion -> . DECLARACIONES fins
    (6) instruccion -> . if_instr fins
    (7) instruccion -> . while_instr fins
    (8) instruccion -> . for_inst fins
    (10) instruccion -> . error PTCOMA
    (11) imprimirins -> . RPRINTLN PARAB expresion PARC
    (19) DECLARACIONES -> . DECLA_COM
    (20) DECLARACIONES -> . DECLA_SIM
    (12) if_instr -> . RIF expresion instrucciones REND
    (13) if_instr -> . RIF expresion instrucciones elifinst RELSE instrucciones REND
    (17) while_instr -> . RWHILE expresion instrucciones REND
    (18) for_inst -> . RFOR ID RIN expresion DPUNTOS expresion instrucciones REND
    (22) DECLA_COM -> . ID IGUALAR expresion DOSP TIPOS
    (21) DECLA_SIM -> . ID IGUALAR expresion

    error           shift and go to state 9
    RPRINTLN        shift and go to state 10
    RIF             shift and go to state 13
    RWHILE          shift and go to state 14
    RFOR            shift and go to state 15
    ID              shift and go to state 16

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimirins                    shift and go to state 4
    DECLARACIONES                  shift and go to state 5
    if_instr                       shift and go to state 6
    while_instr                    shift and go to state 7
    for_inst                       shift and go to state 8
    DECLA_COM                      shift and go to state 11
    DECLA_SIM                      shift and go to state 12

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimirins fins
    (5) instruccion -> . DECLARACIONES fins
    (6) instruccion -> . if_instr fins
    (7) instruccion -> . while_instr fins
    (8) instruccion -> . for_inst fins
    (10) instruccion -> . error PTCOMA
    (11) imprimirins -> . RPRINTLN PARAB expresion PARC
    (19) DECLARACIONES -> . DECLA_COM
    (20) DECLARACIONES -> . DECLA_SIM
    (12) if_instr -> . RIF expresion instrucciones REND
    (13) if_instr -> . RIF expresion instrucciones elifinst RELSE instrucciones REND
    (17) while_instr -> . RWHILE expresion instrucciones REND
    (18) for_inst -> . RFOR ID RIN expresion DPUNTOS expresion instrucciones REND
    (22) DECLA_COM -> . ID IGUALAR expresion DOSP TIPOS
    (21) DECLA_SIM -> . ID IGUALAR expresion

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 9
    RPRINTLN        shift and go to state 10
    RIF             shift and go to state 13
    RWHILE          shift and go to state 14
    RFOR            shift and go to state 15
    ID              shift and go to state 16

    instruccion                    shift and go to state 17
    imprimirins                    shift and go to state 4
    DECLARACIONES                  shift and go to state 5
    if_instr                       shift and go to state 6
    while_instr                    shift and go to state 7
    for_inst                       shift and go to state 8
    DECLA_COM                      shift and go to state 11
    DECLA_SIM                      shift and go to state 12

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINTLN        reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    REND            reduce using rule 3 (instrucciones -> instruccion .)
    RELSEIF         reduce using rule 3 (instrucciones -> instruccion .)
    RELSE           reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimirins . fins
    (9) fins -> . PTCOMA

    PTCOMA          shift and go to state 19

    fins                           shift and go to state 18

state 5

    (5) instruccion -> DECLARACIONES . fins
    (9) fins -> . PTCOMA

    PTCOMA          shift and go to state 19

    fins                           shift and go to state 20

state 6

    (6) instruccion -> if_instr . fins
    (9) fins -> . PTCOMA

    PTCOMA          shift and go to state 19

    fins                           shift and go to state 21

state 7

    (7) instruccion -> while_instr . fins
    (9) fins -> . PTCOMA

    PTCOMA          shift and go to state 19

    fins                           shift and go to state 22

state 8

    (8) instruccion -> for_inst . fins
    (9) fins -> . PTCOMA

    PTCOMA          shift and go to state 19

    fins                           shift and go to state 23

state 9

    (10) instruccion -> error . PTCOMA

    PTCOMA          shift and go to state 24


state 10

    (11) imprimirins -> RPRINTLN . PARAB expresion PARC

    PARAB           shift and go to state 25


state 11

    (19) DECLARACIONES -> DECLA_COM .

    PTCOMA          reduce using rule 19 (DECLARACIONES -> DECLA_COM .)


state 12

    (20) DECLARACIONES -> DECLA_SIM .

    PTCOMA          reduce using rule 20 (DECLARACIONES -> DECLA_SIM .)


state 13

    (12) if_instr -> RIF . expresion instrucciones REND
    (13) if_instr -> RIF . expresion instrucciones elifinst RELSE instrucciones REND
    (28) expresion -> . expresion MAS expresion
    (29) expresion -> . expresion MENOS expresion
    (30) expresion -> . expresion POR expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion POT expresion
    (33) expresion -> . expresion MOD expresion
    (34) expresion -> . expresion MAY expresion
    (35) expresion -> . expresion MEN expresion
    (36) expresion -> . expresion MAYOIGUAL expresion
    (37) expresion -> . expresion MENOIGUAL expresion
    (38) expresion -> . expresion IGUALES expresion
    (39) expresion -> . expresion DIFERENTES expresion
    (40) expresion -> . PARAB expresion PARC
    (41) expresion -> . ID
    (42) expresion -> . ENTERO
    (43) expresion -> . DECIMAL
    (44) expresion -> . CADENA
    (45) expresion -> . CHAR

    PARAB           shift and go to state 27
    ID              shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31
    CHAR            shift and go to state 32

    expresion                      shift and go to state 26

state 14

    (17) while_instr -> RWHILE . expresion instrucciones REND
    (28) expresion -> . expresion MAS expresion
    (29) expresion -> . expresion MENOS expresion
    (30) expresion -> . expresion POR expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion POT expresion
    (33) expresion -> . expresion MOD expresion
    (34) expresion -> . expresion MAY expresion
    (35) expresion -> . expresion MEN expresion
    (36) expresion -> . expresion MAYOIGUAL expresion
    (37) expresion -> . expresion MENOIGUAL expresion
    (38) expresion -> . expresion IGUALES expresion
    (39) expresion -> . expresion DIFERENTES expresion
    (40) expresion -> . PARAB expresion PARC
    (41) expresion -> . ID
    (42) expresion -> . ENTERO
    (43) expresion -> . DECIMAL
    (44) expresion -> . CADENA
    (45) expresion -> . CHAR

    PARAB           shift and go to state 27
    ID              shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31
    CHAR            shift and go to state 32

    expresion                      shift and go to state 33

state 15

    (18) for_inst -> RFOR . ID RIN expresion DPUNTOS expresion instrucciones REND

    ID              shift and go to state 34


state 16

    (22) DECLA_COM -> ID . IGUALAR expresion DOSP TIPOS
    (21) DECLA_SIM -> ID . IGUALAR expresion

    IGUALAR         shift and go to state 35


state 17

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINTLN        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RWHILE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFOR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    REND            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RELSEIF         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RELSE           reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 18

    (4) instruccion -> imprimirins fins .

    error           reduce using rule 4 (instruccion -> imprimirins fins .)
    RPRINTLN        reduce using rule 4 (instruccion -> imprimirins fins .)
    RIF             reduce using rule 4 (instruccion -> imprimirins fins .)
    RWHILE          reduce using rule 4 (instruccion -> imprimirins fins .)
    RFOR            reduce using rule 4 (instruccion -> imprimirins fins .)
    ID              reduce using rule 4 (instruccion -> imprimirins fins .)
    $end            reduce using rule 4 (instruccion -> imprimirins fins .)
    REND            reduce using rule 4 (instruccion -> imprimirins fins .)
    RELSEIF         reduce using rule 4 (instruccion -> imprimirins fins .)
    RELSE           reduce using rule 4 (instruccion -> imprimirins fins .)


state 19

    (9) fins -> PTCOMA .

    error           reduce using rule 9 (fins -> PTCOMA .)
    RPRINTLN        reduce using rule 9 (fins -> PTCOMA .)
    RIF             reduce using rule 9 (fins -> PTCOMA .)
    RWHILE          reduce using rule 9 (fins -> PTCOMA .)
    RFOR            reduce using rule 9 (fins -> PTCOMA .)
    ID              reduce using rule 9 (fins -> PTCOMA .)
    $end            reduce using rule 9 (fins -> PTCOMA .)
    REND            reduce using rule 9 (fins -> PTCOMA .)
    RELSEIF         reduce using rule 9 (fins -> PTCOMA .)
    RELSE           reduce using rule 9 (fins -> PTCOMA .)


state 20

    (5) instruccion -> DECLARACIONES fins .

    error           reduce using rule 5 (instruccion -> DECLARACIONES fins .)
    RPRINTLN        reduce using rule 5 (instruccion -> DECLARACIONES fins .)
    RIF             reduce using rule 5 (instruccion -> DECLARACIONES fins .)
    RWHILE          reduce using rule 5 (instruccion -> DECLARACIONES fins .)
    RFOR            reduce using rule 5 (instruccion -> DECLARACIONES fins .)
    ID              reduce using rule 5 (instruccion -> DECLARACIONES fins .)
    $end            reduce using rule 5 (instruccion -> DECLARACIONES fins .)
    REND            reduce using rule 5 (instruccion -> DECLARACIONES fins .)
    RELSEIF         reduce using rule 5 (instruccion -> DECLARACIONES fins .)
    RELSE           reduce using rule 5 (instruccion -> DECLARACIONES fins .)


state 21

    (6) instruccion -> if_instr fins .

    error           reduce using rule 6 (instruccion -> if_instr fins .)
    RPRINTLN        reduce using rule 6 (instruccion -> if_instr fins .)
    RIF             reduce using rule 6 (instruccion -> if_instr fins .)
    RWHILE          reduce using rule 6 (instruccion -> if_instr fins .)
    RFOR            reduce using rule 6 (instruccion -> if_instr fins .)
    ID              reduce using rule 6 (instruccion -> if_instr fins .)
    $end            reduce using rule 6 (instruccion -> if_instr fins .)
    REND            reduce using rule 6 (instruccion -> if_instr fins .)
    RELSEIF         reduce using rule 6 (instruccion -> if_instr fins .)
    RELSE           reduce using rule 6 (instruccion -> if_instr fins .)


state 22

    (7) instruccion -> while_instr fins .

    error           reduce using rule 7 (instruccion -> while_instr fins .)
    RPRINTLN        reduce using rule 7 (instruccion -> while_instr fins .)
    RIF             reduce using rule 7 (instruccion -> while_instr fins .)
    RWHILE          reduce using rule 7 (instruccion -> while_instr fins .)
    RFOR            reduce using rule 7 (instruccion -> while_instr fins .)
    ID              reduce using rule 7 (instruccion -> while_instr fins .)
    $end            reduce using rule 7 (instruccion -> while_instr fins .)
    REND            reduce using rule 7 (instruccion -> while_instr fins .)
    RELSEIF         reduce using rule 7 (instruccion -> while_instr fins .)
    RELSE           reduce using rule 7 (instruccion -> while_instr fins .)


state 23

    (8) instruccion -> for_inst fins .

    error           reduce using rule 8 (instruccion -> for_inst fins .)
    RPRINTLN        reduce using rule 8 (instruccion -> for_inst fins .)
    RIF             reduce using rule 8 (instruccion -> for_inst fins .)
    RWHILE          reduce using rule 8 (instruccion -> for_inst fins .)
    RFOR            reduce using rule 8 (instruccion -> for_inst fins .)
    ID              reduce using rule 8 (instruccion -> for_inst fins .)
    $end            reduce using rule 8 (instruccion -> for_inst fins .)
    REND            reduce using rule 8 (instruccion -> for_inst fins .)
    RELSEIF         reduce using rule 8 (instruccion -> for_inst fins .)
    RELSE           reduce using rule 8 (instruccion -> for_inst fins .)


state 24

    (10) instruccion -> error PTCOMA .

    error           reduce using rule 10 (instruccion -> error PTCOMA .)
    RPRINTLN        reduce using rule 10 (instruccion -> error PTCOMA .)
    RIF             reduce using rule 10 (instruccion -> error PTCOMA .)
    RWHILE          reduce using rule 10 (instruccion -> error PTCOMA .)
    RFOR            reduce using rule 10 (instruccion -> error PTCOMA .)
    ID              reduce using rule 10 (instruccion -> error PTCOMA .)
    $end            reduce using rule 10 (instruccion -> error PTCOMA .)
    REND            reduce using rule 10 (instruccion -> error PTCOMA .)
    RELSEIF         reduce using rule 10 (instruccion -> error PTCOMA .)
    RELSE           reduce using rule 10 (instruccion -> error PTCOMA .)


state 25

    (11) imprimirins -> RPRINTLN PARAB . expresion PARC
    (28) expresion -> . expresion MAS expresion
    (29) expresion -> . expresion MENOS expresion
    (30) expresion -> . expresion POR expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion POT expresion
    (33) expresion -> . expresion MOD expresion
    (34) expresion -> . expresion MAY expresion
    (35) expresion -> . expresion MEN expresion
    (36) expresion -> . expresion MAYOIGUAL expresion
    (37) expresion -> . expresion MENOIGUAL expresion
    (38) expresion -> . expresion IGUALES expresion
    (39) expresion -> . expresion DIFERENTES expresion
    (40) expresion -> . PARAB expresion PARC
    (41) expresion -> . ID
    (42) expresion -> . ENTERO
    (43) expresion -> . DECIMAL
    (44) expresion -> . CADENA
    (45) expresion -> . CHAR

    PARAB           shift and go to state 27
    ID              shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31
    CHAR            shift and go to state 32

    expresion                      shift and go to state 36

state 26

    (12) if_instr -> RIF expresion . instrucciones REND
    (13) if_instr -> RIF expresion . instrucciones elifinst RELSE instrucciones REND
    (28) expresion -> expresion . MAS expresion
    (29) expresion -> expresion . MENOS expresion
    (30) expresion -> expresion . POR expresion
    (31) expresion -> expresion . DIV expresion
    (32) expresion -> expresion . POT expresion
    (33) expresion -> expresion . MOD expresion
    (34) expresion -> expresion . MAY expresion
    (35) expresion -> expresion . MEN expresion
    (36) expresion -> expresion . MAYOIGUAL expresion
    (37) expresion -> expresion . MENOIGUAL expresion
    (38) expresion -> expresion . IGUALES expresion
    (39) expresion -> expresion . DIFERENTES expresion
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimirins fins
    (5) instruccion -> . DECLARACIONES fins
    (6) instruccion -> . if_instr fins
    (7) instruccion -> . while_instr fins
    (8) instruccion -> . for_inst fins
    (10) instruccion -> . error PTCOMA
    (11) imprimirins -> . RPRINTLN PARAB expresion PARC
    (19) DECLARACIONES -> . DECLA_COM
    (20) DECLARACIONES -> . DECLA_SIM
    (12) if_instr -> . RIF expresion instrucciones REND
    (13) if_instr -> . RIF expresion instrucciones elifinst RELSE instrucciones REND
    (17) while_instr -> . RWHILE expresion instrucciones REND
    (18) for_inst -> . RFOR ID RIN expresion DPUNTOS expresion instrucciones REND
    (22) DECLA_COM -> . ID IGUALAR expresion DOSP TIPOS
    (21) DECLA_SIM -> . ID IGUALAR expresion

    MAS             shift and go to state 38
    MENOS           shift and go to state 39
    POR             shift and go to state 40
    DIV             shift and go to state 41
    POT             shift and go to state 42
    MOD             shift and go to state 43
    MAY             shift and go to state 44
    MEN             shift and go to state 45
    MAYOIGUAL       shift and go to state 46
    MENOIGUAL       shift and go to state 47
    IGUALES         shift and go to state 48
    DIFERENTES      shift and go to state 49
    error           shift and go to state 9
    RPRINTLN        shift and go to state 10
    RIF             shift and go to state 13
    RWHILE          shift and go to state 14
    RFOR            shift and go to state 15
    ID              shift and go to state 16
